syntax = "proto3";

option go_package = "github.com/budadcabrion/go-test/leaderboard2/service";

package service;

service Service {
	rpc SetScore (PlayerScore) returns (SetScoreReply) {}

	rpc GetScores (GetScoresRequest) returns (stream PlayerScore) {}
}

message PlayerScore {
	string name = 1;
	int64 score = 2;
}

message SetScoreReply {
}

message GetScoresRequest {
	int64 start = 1;
	int64 count = 2;
}